# ccsc-2026

./: .gitignore  README.md  TODO.md  db.sqlite3  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
accounts/: admin.py  forms.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  signup.html
ai_models/: admin.py  models.py
ai_models/migrations/: 0001_initial.py
conf/: settings.py  urls.py
conversations/: admin.py  models.py  urls.py  views.py
conversations/helpers/: get_prompt.py
conversations/migrations/: 0001_initial.py  0002_conversation_model.py  0003_alter_message_timestamp.py  0004_alter_conversation_created_at.py  0005_alter_conversation_created_at_and_more.py
conversations/templates/: home.html
conversations/templates/conversations/: main_page.html
conversations/templates/conversations/partials/: chat_form.html  chat_shell.html  conversation_layout.html  message_history.html  model_selector.html
conversations/templatetags/: message_formatting.py
static/src/: app.css  app.js
templates/: base.html
